--- a/public/choosing-tutorial-page-hollow-knight-all.html
+++ b/public/choosing-tutorial-page-hollow-knight-all.html
@@ -13,7 +13,7 @@
   <body class="">
     <!-- Background with a darkener -->
     <!-- change the class to match your game!! -->
-    <div class="bg bg-GAME"></div>
+    <div class="bg bg-hollow-knight"></div>
     <div class="bg darken"></div>
 
     <!-- Put header here -->
@@ -56,59 +56,41 @@
     <!-- Main Body -->
     <main class="body">
       <!-- Change your hero image here!! -->
-      <img class="hero" src="images/hero-GAME.jpg" alt="">
+      <img class="hero" src="images/hero-hollow-knight.jpg" alt="">
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
-          <li class="selected"><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
-          <li><a href="choosing-tutorial-page-gta-section2.html">section2</a></li>
-          <li><a href="choosing-tutorial-page-gta-section3.html">section3</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-hollow-knight-all.html">ALL</a></li>
+          <li><a href="choosing-tutorial-page-hollow-knight-section1.html">Area's</a></li>
+          <li><a href="choosing-tutorial-page-hollow-knight-section2.html">Bosses</a></li>
+          <li><a href="choosing-tutorial-page-hollow-knight-section3.html">Lore</a></li>
         </ul>
       </nav>
 
       <!-- Each article is one tutorial -->
       <!-- put the link to the tutorialpage here!! -->
-      <a href="Tutorial-gta-1.html">
+      <a href="Tutorial-hollow-knight-lore.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-hollow-knight-lore.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">Name of tutorial</h2>
+            <h2 class="margin-0">Lore</h2>
             <hr>
             <!-- Change you name here!! -->
             <h6 class="margin-0">By Thomas Zegers</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              Introduction to tutorial
+              The (mostly) complete lore of Hollow Knight
             </p>
           </div>
         </article>
       </a>
 
-      <a href="#2">
+      <a href="Tutorial-hollow-knight-NAME.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
-          <div>
-            <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">Name of tutorial</h2>
-            <hr>
-            <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
-            <!-- Write a summary of the tutorial here!! -->
-            <p>
-              Introduction to tutorial
-            </p>
-          </div>
-        </article>
-      </a>
-
-      <a href="#3">
-        <article class="flex tutorial ">
-          <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-hollow-knight-NAME.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Name of tutorial</h2>
